@@ -26,7 +26,7 @@ ACF_DefineEngine( "2.1-B4", {
 	category = "B4",
 	fuel = "Petrol",
 	enginetype = "GenericPetrol",
-	weight = 140,
+	weight = 125,
 	torque = 180,
 	flywheelmass = 0.15,
 	idlerpm = 700,
@@ -55,12 +55,12 @@ ACF_DefineEngine( "3.2-B4", {
 ACF_DefineEngine( "2.4-B4", {
 	name = "2.4L Flat 4 Multifuel",
 	desc = "Tiny military-grade multifuel. Heavy, but grunts hard.",
-	model = "models/engines/b4med.mdl",
+	model = "models/engines/b4small.mdl",
 	sound = "acf_extra/vehiclefx/engines/coh/ba11.wav",
 	category = "B4",
 	fuel = "Multifuel",
 	enginetype = "GenericDiesel",
-	weight = 195,
+	weight = 135,
 	torque = 248,
 	flywheelmass = 0.4,
 	idlerpm = 550,
